--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -106,25 +106,28 @@
   #repository_name, #repository_url { width:70%; }
 
   /*  MAIL/ADMINISTRATOR SETTINGS AND   */
-  #mailForm input[type="text"], #adminForm input[type="password"] {width:300px;}
+  #mailForm input[type="text"], #adminForm input[type="password"], #group_cn {width:300px;}
   #mail_test_mail_address, #mail_submit, #administrator_aliases, #administrator_submit { float: left; vertical-align:middle; }
 
   #mail_test_mail_address {width:225px!important;}
   #administrator_aliases { width:190px; }
+  #group_members_string { width:172px; }
   
-  #mail_test_mail_address, #administrator_aliases {
+  #mail_test_mail_address, #administrator_aliases, #group_members_string {
     border-radius:3px 0px 0px 3px;
     -moz-border-radius: 3px 0px 0px 3px;
     -webkit-border-radius:3px 0px 0px 3px;
   }
 
-  #mail_submit, #administrator_submit {
+  #mail_submit, #administrator_submit, #manage_members {
      border-left-width: 0px;
      border-radius:0px 3px 3px 0px;
     -moz-border-radius:0px 3px 3px 0px;
     -webkit-border-radius:0px 3px 3px 0px;
   }
 
+  #group_members_string, #manage_members { float:left; font-size:12px; }
+  
   /* TIME */
     /* Fix for bug 601309 - Radio buttons and checkboxes look ugly in IE8  */
   input[type="radio"], input[type="checkbox"] { border: none; background: none; vertical-align:top;}
@@ -300,7 +303,7 @@
   }
 
 /* USERS & GROUPS */
-  #search-userbar {
+  #search-userbar, #softwarebar {
     padding:3px 3px 2px 3px;
     margin-left:12px;
     margin-top:12px;
@@ -316,8 +319,14 @@
     width:928px;
     background:url('../images/gradient40-60.png') repeat-x #f5f5f5; 
   }
+
+  #search-userbar label, #softwarebar label {
+    font-weight:bold; 
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.9);
+  }
   
-  #home-container, #search-container,#link-container { float:left; padding:0; }
+  #home-container, #search-container, #link-container { float:left; padding:0; }
+  #filter-container {float:right; padding:0;}
 
   #home { 
     width:18px; 	
