--- a/webclient/public/stylesheets/ie/ie_fixes.css
+++ b/webclient/public/stylesheets/ie/ie_fixes.css
@@ -16,3 +16,7 @@ legend { position: relative; top: -.9em; left: .2em; }
 /* Fix for bug 601309 - Radio buttons and checkboxes look ugly in IE8  */
 input[type="radio"] { height:18px; width:18px;}
 input[type="checkbox"] { height:16px; width:16px;}
+
+/* Different width in IE and FF, TODO: find the other way to get the same lenght in different browsers */
+#group_members_string  { width:180px!important;}
+#manage_members {font-size:12px;}
