--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -303,7 +303,7 @@
   }
 
 /* USERS & GROUPS */
-  #search-userbar, #softwarebar {
+  #search-userbar, #softwarebar, #systembar {
     padding:3px 3px 2px 3px;
     margin-left:12px;
     margin-top:12px;
@@ -320,7 +320,7 @@
     background:url('../images/gradient40-60.png') repeat-x #f5f5f5; 
   }
 
-  #search-userbar label, #softwarebar label {
+  #search-userbar label, #softwarebar label, #systembar label {
     font-weight:bold; 
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.9);
   }
