--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -61,6 +61,8 @@ function def_group_validation(which){ return true; }
      #ContainerUser .GBox {
         background-color: #eee;
      }
+
+    #form_ label.error {margin-left:5px}
     #password-strength {
 	left: 0em;
     }
