--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -244,7 +244,7 @@ ul li
   ul em
     font-weight: bold
   li a:hover
-    color: #06c
+    /*color: #06c
 
 /* == Basic Styles ========================================================
 
@@ -402,7 +402,8 @@ label.error
   text-align: left
   vertical-align: middle
   display: none
-  color: red
+  color: #990000
+  font-weight: bold
   padding: 0 0 0 0
   margin: 2px
   width: auto
