- fixed Automatically inform user about session time out bnc#558026

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -196,7 +196,31 @@ ul li
   ul.header-links
     float: right
     vertical-align: bottom
-
+ 
+ 
+#idletimeout 
+  display: none
+  font-size: 16px
+  font-weight: bold
+  padding: 14px
+  position: absolute
+  right: 0
+  left: 0 
+  top: 0
+  text-align: center
+  z-index: 100000
+  color: #333
+  background-color: #FEEFB3
+  border-top: 2px solid #999
+  border-bottom: 2px solid #999
+  
+  img 
+    left: 0
+    margin: 2px 1em 0
+    position: absolute
+    top: 0px
+    float: left
+    
 #content
   h3
     font-size: 1.7em
