- removed recurring css properties for input elements from style.sass because of conflict with new_inputs.css - added missed validation on keyup

--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -57,7 +57,7 @@
 
     // disable global onsubmit validation, the relevant fields are validated explicitly in onclick handlers
     $(document).ready(function() {
-      $("#adminForm").validate({onsubmit: false})
+      $("#adminForm").validate({onkeyup: function(element) { this.element(element); }, onsubmit: false})
 
       // make the error message translatable - override the default messsage
       $.extend($.validator.messages, {
