--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -44,6 +44,7 @@
 				"yast.widgets",
 				"yast.helpers",
 				"digitalspaghetti.password.js",
+				"validation.js",
 				"/javascripts/browser_fixes" %>
     <%= javascript_include_tag "jquery.idletimer", "jquery.idletimeout" %>
     
