--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -27,30 +27,30 @@
 !border_outset_base_color = !c_button_border
 =button
   +round-corners
-  background: !c_button url(images/button-bg-rollover-gradient.png) repeat-x scroll center top
-  color: !c_text
+  /*background: !c_button url(images/button-bg-rollover-gradient.png) repeat-x scroll center top
+  /*color: !c_text
   font-size: 13px
-  font-family: Trebuchet MS, Helvetica, sans-serif
-  font-weight: bold
+  /*font-family: Trebuchet MS, Helvetica, sans-serif
+  /*font-weight: bold
   +border-outset
   -moz-background-inline-policy: continuous
   -moz-background-origin: padding
-  cursor: pointer
-  padding: 2px 10px
-  text-decoration: none
-  text-shadow: 0 -1px 0 !c_text_shadow
+  /*cursor: pointer
+  /*padding: 2px 10px
+  /*text-decoration: none
+  /*text-shadow: 0 -1px 0 !c_text_shadow
   width: auto
   vertical-align: baseline
   &:hover
-    background-color: mix(!c_black, !c_button, 30%)
-    background-position: 0 -22px
-    color: !c_inverse_text
-    text-shadow: 0 -1px 0 !c_hower_text_shadow
+    /*background-color: mix(!c_black, !c_button, 30%)
+    /*background-position: 0 -22px
+    /*color: !c_inverse_text
+    /*text-shadow: 0 -1px 0 !c_hower_text_shadow
   &[disabled]
-    color: !c_disabled_text
-    text-shadow: 0 -1px 0 !c_disabled_text
+    /*color: !c_disabled_text
+    /*text-shadow: 0 -1px 0 !c_disabled_text
     &:hover
-      background-position: 0 0px
+      /*background-position: 0 0px
 /* html,
 
 /* unnecessary property, causes inheritance
@@ -87,11 +87,11 @@ a
   font-weight: bold
   text-decoration: none
   font-size: 11px
-  /*   border-bottom:1px dotted #8e908b;
+  /*border-bottom:1px dotted #8e908b;
   border-bottom: 1px dotted !c_anchor_underline
   &:hover
     color: !c_anchor
-    font-size: 11px
+    /*font-size: 11px
     /*   text-decoration: underline;
     border-bottom: 2px solid !c_anchor_underline
   &.action-link
@@ -103,45 +103,45 @@ a
     /*  border-bottom:2px solid #666;
     &:hover
       /*  color:#1e90ff;
-      color: !c_anchor
+      /* color: !c_anchor
       font-size: 13px
       /*  color:#a0a0a0;
       font-weight: bold
       /*  border-bottom:3px solid #1C94C4;
       /*  border-bottom:2px dotted #D84630;
-      border-bottom: 2px solid !c_anchor_underline
+      /* border-bottom: 2px solid !c_anchor_underline
       /*  Studio: #8e908b
       /*  text-shadow:0px 0px 8px rgba(160,160,160,1), 0px 0px 15px rgba(28,148,169,0.5), 0px 0px 20px rgba(120,120,120,0.2);
   &.button
-    +button
+    /*+button
     /* CSS Hack for IE8
-    padding: 2px 10px\9
-    color: !c_text \9 !important
+    /*padding: 2px 10px\9
+    /*color: !c_text \9 !important
     /* end of hack
 
 /* CSS properties for all input elements
 
 input
   &.button, &[type="submit"], &[type="button"]
-    +button
+    /*+button
 
 /* CSS Hack for FF
 html a.button:only-of-type
   padding: 3px 10px
 
 input
-  border: 1px solid !c_button_border
-  padding: 3px
-  color: !c_text
-  font-size: 1em
-  background: !c_inverse_text
+  /*border: 1px solid !c_button_border
+  /*padding: 3px
+  /*color: !c_text
+  /*font-size: 1em
+  /*background: !c_inverse_text
 
 select
-  border: 1px solid !c_button_border
-  padding: 2px
-  color: !c_text
+  /*border: 1px solid !c_button_border
+  /*padding: 2px
+  /*color: !c_text
   font-size: 1em
-  background: !c_inverse_text
+  /*background: !c_inverse_text
   &:focus
     border: 1px solid !c_focused_input
 
@@ -155,18 +155,18 @@ select
 /* breaks button background in IE8 (Groups and users module)
 /*input { vertical-align: top; }
 
-input
-  &[type="text"],&[type="password"]
-    width: 300px
-    border-color: !c_input_border
-    &:focus
-      width: 300px
-      border: 1px solid !c_focused_input
-      color: !c_text
-  &[disabled]
-    /*background-color: !c_button
-    background-color: #ddd
-    color: #999
+/*input
+/*  &[type="text"],&[type="password"]
+/*    width: 300px
+/*    border-color: !c_input_border
+/*    &:focus
+/*      width: 300px
+/*      border: 1px solid !c_focused_input
+/*      color: !c_text
+/*  &[disabled]
+/*    /*background-color: !c_button
+/*    background-color: #ddd
+/*    color: #999
 
 img
   border: none
@@ -610,10 +610,12 @@ tr
 
 !border_outset_base_color = !c_fieldset
 .list-fieldset
-  +border-outset
+  /*+border-outset
+  border: 2px solid #dfdfdf
   background-color: !c_fieldset
   +round-corners
-  padding: 0 0.5em
+  /*padding: 0 0.5em
+  padding: 3px
   margin: 0.5em 1em 0.5em
 
 .list-fieldset-header, .ui-accordion .list-fieldset-header.ui-accordion-header
