- fixed Language selection looks resizable (bnc#605861)

--- a/webclient/app/views/main/_select_language.html.erb
+++ b/webclient/app/views/main/_select_language.html.erb
@@ -33,6 +33,7 @@
            {
     	     bgiframe: true,
     	     autoOpen: false,
+	     resizable: false,
     	     height: 'auto',
 	     title: "<%= _("Language Selection")%>",
     	     modal: true
