--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -57,6 +57,7 @@
     padding:3px 6px 3px 6px;
   }
 
+  a.button:hover { border: 1px solid #999;}
   a.button:-moz-any-link, a.button:default { padding:3px 8px 3px 7px; } 
 
   /* HOVER, ACTIVE, DISABLED */
