- check display_status for displaying status - make top label configurable ("My Appliance")

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -59,7 +59,7 @@
     </div>
     <div id="status_status">
       <% if ActionController::Routing.possible_controllers.include?("status") %>
-	<% if display_patches %>
+	<% if display_status %>
 	  <%= image_tag("/images/working.gif", :class => "small-working-icon") %><label><%= _("Loading system information") %></label>
 	<% else %>
 	  <div class="status-icon optional"></div><span><%= _("System status summary is disabled in the config file.") %></span>
