--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -342,6 +342,11 @@ ul li
   width: 100%
   min-height: 80px
 
+#warning_message_text
+  font-size: 16px
+  color: #444
+  vertical-align: middle
+
 /* == Lists and Tables ====================================================
 
 div.overview
