--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -665,3 +665,16 @@ div#browserWarning
   min-height: 5em
   div, h2
     display: block
+    
+.eula-text-area 
+  height: 30em
+  background-color: white
+  overflow: auto
+  border: 1px solid #999
+  font-size: 1.1em
+  font-family: courier, serif
+  
+.eula_paragraph
+  text-align: left
+  padding-top: 5px
+   
